...
              <View style={styles.poweredBy}>
                <Text style={styles.poweredByText}>Powered by:</Text>
                <Text style={styles.finverseLogo}>Finverse</Text>
              </View>

              <Text style={styles.termsText}>
                By selecting "Continue" you agree to{'\n'}
                <Text style={styles.termsLink}>Finverse's Terms of Use and Privacy Policy</Text>
              </Text>
            </View>
          </ScrollView>
        )}

...
